style: Style Goals buttons and fix alignments

--- a/frontend/lmapp/src/styles/Goals/goals-view.css
+++ b/frontend/lmapp/src/styles/Goals/goals-view.css
@@ -1,10 +1,10 @@
 .goals-container {
     width: auto;
     /*max-width: 600px;*/
-    margin: 0 auto;
+    margin: 5px 12px;
     padding: 20px;
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
+    background: #5c5c5c;
+    /*border: 1px solid #ddd;*/
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
